[package]
name = "puente_balanzav3"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
confy = "0.5"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
regex = "1"
serialport = "4.2"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
toml = "0.8"
anyhow = "1.0"
flume = "0.11"
once_cell = "1.19"
nix = "0.27"
